# watchy-rs

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
bma423/: Cargo.toml
bma423-async/: Cargo.toml
bma423-async/src/: lib.rs  register.rs
bma423/src/: lib.rs
gdeh0154d67-async/: Cargo.toml
gdeh0154d67-async/src/: lib.rs
nix/: riscv32-gcc.nix  rust-src.nix  rust.nix  xtensa-gcc.nix
pcf8563-async/: Cargo.toml
pcf8563-async/src/: lib.rs
src/: battery.rs  buttons.rs  draw_buffer.rs  font.rs  main.rs  vibration_motor.rs  watchy.rs
