[workspace]
members = ["bma423-async", "gdeh0154d67-async", "pcf8563-async"]

[package]
name = "watchy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32-hal = { version = "0.18.0", features = ["async", "embassy", "embassy-executor-thread", "embassy-time-timg0"] }
esp-backtrace = { version = "0.9.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.7.1", features = ["esp32"] }
static_cell = "2.0.0"
embassy-executor = { version = "0.5.0", features = ["nightly", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.1.0", features = ["async"] }
bma423-async = { path = "./bma423-async" }
pcf8563-async = { path = "./pcf8563-async" }
gdeh0154d67-async = { path = "./gdeh0154d67-async" }
embedded-graphics = "0.8.1"
arrayvec = { version = "0.7.4", default-features = false }
