[workspace]
members = ["bma423-async", "gdeh0154d67-async", "pcf8563-async"]

[package]
name = "watchy-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.23.1", features = ["esp32"] }
esp-backtrace = { version = "0.15.1", features = [
  "esp32",
  "panic-handler",
  "exception-handler",
  "defmt",
] }
esp-hal-embassy = { version = "0.6.0", features = ["esp32", "defmt"] }
esp-println = { version = "0.13.1", features = [
  "esp32",
  "log",
  "defmt-espflash",
] }
static_cell = "2.0.0"
embassy-executor = { version = "0.7.0", features = [
  "nightly",
  "executor-thread",
] }
embassy-time = { version = "0.4.0" }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embassy-embedded-hal = "0.3.0"
embedded-graphics = "0.8.1"
arrayvec = { version = "0.7.6", default-features = false }
embassy-sync = { version = "0.6.2" }
bitflags = "2.3.1"
defmt = "1.0.1"
embassy-futures = { version = "0.1.1", features = ["defmt"] }
nb = "1.1.0"
unwrap-infallible = "0.1.5"

bma423-async = { path = "./bma423-async" }
pcf8563-async = { path = "./pcf8563-async" }
gdeh0154d67-async = { path = "./gdeh0154d67-async" }
